--- a/Kruta/css/main.css
+++ b/Kruta/css/main.css
@@ -42,6 +42,24 @@ header {
     left: 0;
     right: 0; }
 
+.header__top_line__burger__items {
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  position: relative;
+  right: 40%;
+  font-size: 0.625em;
+  text-align: center;
+  padding: 4% 0%;
+  text-transform: uppercase;
+  border-bottom: 2px solid #666; }
+  .header__top_line__burger__items a {
+    color: #000; }
+    .header__top_line__burger__items a:hover {
+      color: #df405a; }
+    .header__top_line__burger__items a:active {
+      color: #1cb87f; }
+
 .header__top_line {
   width: 100%;
   padding: 1% 0%;
@@ -366,6 +384,11 @@ nav ul {
           -ms-flex-pack: distribute;
               justify-content: space-around;
       list-style-type: none; }
+      .footer__menu ul li {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex; }
       .footer__menu ul a {
         color: #fff;
         font-size: 1em;
@@ -393,7 +416,10 @@ nav ul {
   width: 100%;
   height: 13%;
   background-color: #fff;
-  z-index: 2; }
+  z-index: 3; }
+
+.FIXEDED {
+  height: 28% !important; }
 
 /* TODO: HIDE */
 .HIDE {
@@ -507,7 +533,13 @@ nav ul {
       font-family: 'RobotoBold';
       margin: 0% 0% 6% 8%; }
   .fixed {
-    height: 10%; } }
+    height: 10%; }
+  .footer__menu {
+    font-size: 0.6875em;
+    text-align: center; }
+  .footer__webstudio {
+    margin-top: 0%;
+    text-align: center; } }
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width: 320px) {
