--- a/Kruta/css/main.css
+++ b/Kruta/css/main.css
@@ -22,7 +22,8 @@ body {
   position: relative;
   opacity: 1;
   line-height: 1.75;
-  min-width: 320px; }
+  min-width: 320px;
+  overflowX: hidden; }
 
 * {
   -webkit-box-sizing: border-box;
@@ -47,16 +48,16 @@ header {
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease;
   position: relative;
-  right: 40%;
+  right: 115%;
   font-size: 0.625em;
   text-align: center;
-  padding: 4% 0%;
+  padding: 5% 0%;
   text-transform: uppercase;
   border-bottom: 2px solid #666; }
   .header__top_line__burger__items a {
     color: #000; }
     .header__top_line__burger__items a:hover {
-      color: #df405a; }
+      color: #23c869; }
     .header__top_line__burger__items a:active {
       color: #1cb87f; }
 
@@ -69,7 +70,8 @@ header {
   .header__top_line__burger {
     font-size: 2.1875em;
     line-height: 1;
-    text-align: right; }
+    position: relative;
+    left: 75%; }
   .header__top_line__logo {
     height: auto;
     position: absolute;
@@ -78,7 +80,7 @@ header {
     padding: 8px 10px;
     color: #fff;
     text-align: center;
-    background: #e9405a;
+    background: #23c869;
     -webkit-border-radius: 5px;
             border-radius: 5px;
     margin: 0px auto;
@@ -106,6 +108,9 @@ nav ul {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   list-style: none;
   text-transform: uppercase;
   font-size: 1em;
@@ -118,7 +123,7 @@ nav ul {
     -o-transition: all 0.25s ease-in-out;
     transition: all 0.25s ease-in-out; }
     nav ul li a:hover {
-      color: #df405a; }
+      color: #23c869; }
     nav ul li a:active {
       color: #1cb87f; }
 
@@ -133,7 +138,7 @@ nav ul {
   transition: all 0.5s linear;
   margin-top: 21%; }
   .button:hover {
-    background-color: #df405a; }
+    background-color: #23c869; }
   .button:active {
     background-color: #1cb87f; }
 
@@ -154,10 +159,10 @@ nav ul {
     font-family: 'RobotoBold';
     padding: 0px 30px; }
   .header__content_center_buttons__about {
-    border: 2px solid #df405a;
+    border: 2px solid #23c869;
     padding: 8px 20px; }
   .header__content_center_buttons__want {
-    background-color: #df405a; }
+    background-color: #23c869; }
 
 .About {
   width: 100%;
@@ -202,7 +207,7 @@ nav ul {
       -o-transition: all 0.45s linear;
       transition: all 0.45s linear; }
       .Menu__MineMenu__items:hover {
-        border-top: 5px solid #df405a; }
+        border-top: 5px solid #23c869; }
       .Menu__MineMenu__items__title {
         font-size: 1.25em;
         font-family: 'RobotoBold';
@@ -214,14 +219,14 @@ nav ul {
       .Menu__MineMenu__items__cast {
         background: #e3e0e1;
         text-align: center;
-        color: #df405a;
+        color: #23c869;
         padding: 10px 0px;
         font-size: 1.125em;
         font-family: 'RobotoBold'; }
       .Menu__MineMenu__items__buttons {
         width: 180px;
         margin: 4% auto;
-        border: 1px solid #df405a; }
+        border: 1px solid #23c869; }
   .Menu__days ul {
     display: -webkit-box;
     display: -webkit-flex;
@@ -250,7 +255,7 @@ nav ul {
       -o-transition: all 0.45s linear;
       transition: all 0.45s linear; }
       .Menu__days ul li:hover {
-        background-color: #df405a;
+        background-color: #23c869;
         color: #fff; }
       .Menu__days ul li:active {
         background-color: #1cb87f;
@@ -259,7 +264,7 @@ nav ul {
 .next_slide, .prev_slide {
   font-size: 70px;
   position: absolute;
-  color: #df405a; }
+  color: #23c869; }
 
 .next_slide {
   top: 30%;
@@ -293,13 +298,13 @@ nav ul {
   color: #fff; }
   .Reviews__title {
     margin-top: 3%;
-    color: #df405a;
+    color: #23c869;
     font-size: 3.125em; }
 
 .Reviews__carusel__items__img {
   width: 20%;
   height: auto;
-  border: 3px solid #df405a;
+  border: 3px solid #23c869;
   -webkit-border-radius: 50%;
           border-radius: 50%;
   margin: 0px auto;
@@ -314,7 +319,7 @@ nav ul {
   text-align: center; }
   .Reviews__carusel__items__text span {
     font-size: 35px;
-    color: #df405a; }
+    color: #23c869; }
 
 .Callback {
   width: 100%;
@@ -328,8 +333,6 @@ nav ul {
     font-size: 1.125em;
     line-height: 1.2;
     text-transform: uppercase; }
-    .Callback__text strong {
-      color: #df405a; }
   .Callback__items {
     background-color: rgba(245, 241, 240, 0.85);
     padding: 2% 2%;
@@ -340,7 +343,7 @@ nav ul {
     .Callback__items .fa {
       font-size: 1.5625em;
       padding: 10px;
-      color: #df405a; }
+      color: #23c869; }
       .Callback__items .fa:hover {
         color: #1cb87f; }
   .Callback__wrapper {
@@ -353,7 +356,7 @@ nav ul {
     font-size: 0.9375em;
     -webkit-border-radius: 7px;
             border-radius: 7px;
-    border-right: 5px solid #df405a; }
+    border-right: 5px solid #23c869; }
     .Callback__forma table {
       margin: 0 auto; }
       .Callback__forma table tr td {
@@ -365,7 +368,7 @@ nav ul {
       padding: 10px;
       text-align: center;
       background-color: rgba(255, 255, 255, 0.5);
-      border: 2px solid #df405a;
+      border: 2px solid #23c869;
       margin-left: 14%; }
 
 .footer {
@@ -380,15 +383,13 @@ nav ul {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
+      -webkit-flex-wrap: wrap;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap;
       -webkit-justify-content: space-around;
           -ms-flex-pack: distribute;
               justify-content: space-around;
       list-style-type: none; }
-      .footer__menu ul li {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex; }
       .footer__menu ul a {
         color: #fff;
         font-size: 1em;
@@ -396,13 +397,13 @@ nav ul {
         -o-transition: all 0.25s ease-in-out;
         transition: all 0.25s ease-in-out; }
         .footer__menu ul a:hover {
-          color: #df405a; }
+          color: #23c869; }
         .footer__menu ul a:active {
           color: #1cb87f; }
   .footer__webstudio {
     font-size: 1.1875em;
     font-family: 'RobotoBold';
-    color: #df405a;
+    color: #23c869;
     margin-top: 13%; }
 
 /* TODO: HEADER TOP LINE */
@@ -428,7 +429,7 @@ nav ul {
   position: absolute; }
 
 .ACTIVE {
-  background-color: #df405a;
+  background-color: #23c869;
   color: #fff; }
 
 /* TODO: ANIMATION */
@@ -500,8 +501,8 @@ nav ul {
   .About__title {
     font-size: 1.875em; }
   .About__inform {
-    margin-top: 10%;
-    font-size: 0.75em; }
+    margin-top: 1%;
+    font-size: 0.6875em; }
   .Menu__MineMenu {
     margin: 0 5%; }
   .Menu__days {
