--- a/Kruta/css/main.css
+++ b/Kruta/css/main.css
@@ -177,7 +177,8 @@ nav ul {
     margin-top: 5%; }
   .About__inform {
     text-align: left;
-    font-size: 1.0625em; }
+    font-size: 1.0625em;
+    padding: 40px 0px; }
 
 .Menu {
   width: 100%;
@@ -415,12 +416,12 @@ nav ul {
   top: 0;
   left: 0;
   width: 100%;
-  height: 13%;
+  height: 13% !important;
   background-color: #fff;
   z-index: 3; }
 
 .FIXEDED {
-  height: 28% !important; }
+  height: 37% !important; }
 
 /* TODO: HIDE */
 .HIDE {
