--- a/Kruta/css/main.css
+++ b/Kruta/css/main.css
@@ -178,7 +178,8 @@ nav ul {
   .About__inform {
     text-align: left;
     font-size: 1.0625em;
-    padding: 40px 0px; }
+    padding: 40px 0px;
+    color: #23c869; }
 
 .Menu {
   width: 100%;
