--- a/Kruta/css/main.css
+++ b/Kruta/css/main.css
@@ -38,7 +38,7 @@ body {
 
 header {
   width: 100%;
-  min-height: 80vh;
+  min-height: 100vh;
   background: rgba(0, 0, 0, 0.7) url(../img/header.jpg) top center/cover;
   position: relative; }
   header:before {
@@ -151,7 +151,8 @@ nav ul {
 
 .header__content_center {
   color: #fff;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  margin-top: 10%; }
   .header__content_center__title {
     font-size: 2.5em;
     font-family: 'PTbold';
