--- a/Slardarius/css/main.css
+++ b/Slardarius/css/main.css
@@ -119,7 +119,29 @@ header {
           animation: BUTTON 1s linear infinite;
   -webkit-transition: all 1s ease;
   -o-transition: all 1s ease;
-  transition: all 1s ease; }
+  transition: all 1s ease;
+  /* TODO: SECTION ABOUT ME */ }
+
+.AboutMe {
+  width: 100%;
+  height: 60vh; }
+  .AboutMe__title {
+    font-size: 2.5em;
+    text-transform: uppercase;
+    font-family: 'RobotoLight';
+    padding: 3%;
+    text-align: center; }
+  .AboutMe__education p.title {
+    font-size: 1.5625em;
+    font-family: 'RobotoBold';
+    text-transform: uppercase; }
+  .AboutMe__education p.information {
+    font-size: 1.25em;
+    font-family: 'RobotoRegular'; }
+    .AboutMe__education p.information .fa {
+      font-size: 0.75em;
+      padding: 0% 2%;
+      color: #b00021; }
 
 /* TODO: BUTTONS */
 .button {
@@ -130,7 +152,15 @@ header {
   font-family: 'RobotoRegular';
   margin-top: 20%;
   -webkit-border-radius: 5px;
-          border-radius: 5px; }
+          border-radius: 5px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease; }
+  .button:hover {
+    background-color: #fb9c06;
+    color: #000;
+    border: 2px solid #e38d04; }
 
 /* TODO: ANIMATION */
 @-webkit-keyframes LINES {
