--- a/Slardarius/css/main.css
+++ b/Slardarius/css/main.css
@@ -124,7 +124,8 @@ header {
 
 .AboutMe {
   width: 100%;
-  height: 60vh; }
+  min-height: 60vh;
+  padding: 3% 0%; }
   .AboutMe__title {
     font-size: 2.5em;
     text-transform: uppercase;
@@ -162,25 +163,168 @@ header {
     color: #000;
     border: 2px solid #e38d04; }
 
+.PersonalQualities {
+  width: 100%;
+  min-height: 37vh;
+  background-color: #f7f2f2; }
+  .PersonalQualities__img {
+    margin-top: 9%;
+    text-align: center; }
+    .PersonalQualities__img img {
+      width: 80%;
+      height: auto;
+      border: 2px solid #000;
+      -webkit-border-radius: 10px;
+              border-radius: 10px; }
+    .PersonalQualities__img .Group {
+      font-size: 1.25em;
+      font-family: 'RobotoLight';
+      color: #b00021; }
+  .PersonalQualities .Name {
+    font-size: 2.1875em;
+    text-transform: uppercase;
+    font-family: 'RobotoBold'; }
+  .PersonalQualities .List {
+    font-size: 1em;
+    line-height: 1.2;
+    color: #000;
+    font-family: 'RobotoRegular'; }
+    .PersonalQualities .List .fa {
+      font-size: 1.25em;
+      padding: 1%;
+      color: #b00021; }
+
+.Technologies {
+  width: 100%;
+  min-height: 40vh;
+  background-color: #e5dddd; }
+  .Technologies__img {
+    margin-top: 9%;
+    text-align: center; }
+    .Technologies__img img {
+      width: 80%;
+      height: auto;
+      border: 2px solid #000;
+      -webkit-border-radius: 10px;
+              border-radius: 10px; }
+    .Technologies__img .Group {
+      font-size: 1.25em;
+      font-family: 'RobotoLight';
+      color: #b00021; }
+  .Technologies .Name {
+    font-size: 2.1875em;
+    text-transform: uppercase;
+    font-family: 'RobotoBold'; }
+  .Technologies .List {
+    font-size: 1em;
+    line-height: 1.2;
+    color: #000;
+    font-family: 'RobotoRegular';
+    text-transform: uppercase; }
+    .Technologies .List .fa {
+      font-size: 1.25em;
+      padding: 1%;
+      color: #b00021; }
+
+.WoksSkill {
+  width: 100%;
+  min-height: 40vh;
+  background-color: #f7f2f2; }
+  .WoksSkill__img {
+    margin-top: 9%;
+    text-align: center; }
+    .WoksSkill__img img {
+      width: 80%;
+      height: auto;
+      border: 2px solid #000;
+      -webkit-border-radius: 10px;
+              border-radius: 10px; }
+    .WoksSkill__img .Group {
+      font-size: 1.25em;
+      font-family: 'RobotoLight';
+      color: #b00021; }
+  .WoksSkill .Name {
+    font-size: 2.1875em;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'RobotoBold'; }
+  .WoksSkill .List {
+    font-size: 1em;
+    line-height: 1.2;
+    color: #000;
+    font-family: 'RobotoRegular';
+    text-transform: uppercase; }
+    .WoksSkill .List .fa {
+      font-size: 1.25em;
+      padding: 1%;
+      color: #b00021; }
+
+.Modeling {
+  width: 100%;
+  min-height: 35vh;
+  background-color: #2b2a2a;
+  text-align: center;
+  position: relative; }
+  .Modeling img {
+    margin-top: 25%;
+    width: 35%;
+    height: auto; }
+  .Modeling p {
+    font-size: 1.25em;
+    font-family: 'RobotoRegular';
+    color: #fff;
+    text-transform: uppercase; }
+
+.lineFrist, .lineSecond {
+  border-top: 3px solid #fff;
+  width: 200px;
+  height: 0.5;
+  position: absolute;
+  top: 40%; }
+
+.lineFrist {
+  left: 34.5%;
+  -webkit-animation: LINES 2s linear infinite;
+          animation: LINES 2s linear infinite; }
+
+.lineSecond {
+  left: 55%;
+  -webkit-animation: LINES 2s linear 2s infinite;
+          animation: LINES 2s linear 2s infinite; }
+
 /* TODO: ANIMATION */
 @-webkit-keyframes LINES {
   0% {
-    padding: 1%; }
+    border-top: 2px solid #fff;
+    width: 0px; }
+  25% {
+    border-top: 2px solid #b00021;
+    width: 50px; }
   50% {
-    padding: 1.5%; }
+    border-top: 2px solid #e38d04;
+    width: 100px; }
+  75% {
+    border-top: 2px solid #b00021;
+    width: 150px; }
   100% {
-    padding: 2%;
-    border-bottom: 2px solid #b00021;
-    border-top: 2px solid #b00021; } }
+    border-top: 2px solid #hover;
+    width: 200px; } }
 @keyframes LINES {
   0% {
-    padding: 1%; }
+    border-top: 2px solid #fff;
+    width: 0px; }
+  25% {
+    border-top: 2px solid #b00021;
+    width: 50px; }
   50% {
-    padding: 1.5%; }
+    border-top: 2px solid #e38d04;
+    width: 100px; }
+  75% {
+    border-top: 2px solid #b00021;
+    width: 150px; }
   100% {
-    padding: 2%;
-    border-bottom: 2px solid #b00021;
-    border-top: 2px solid #b00021; } }
+    border-top: 2px solid #hover;
+    width: 200px; } }
 
 @-webkit-keyframes BUTTON {
   0% {
@@ -197,3 +341,82 @@ header {
   100% {
     top: 26vh;
     color: #b00021; } }
+
+@-webkit-keyframes BUTTON320 {
+  0% {
+    top: 3vh;
+    color: #000; }
+  100% {
+    top: 5vh;
+    color: #b00021; } }
+
+@keyframes BUTTON320 {
+  0% {
+    top: 3vh;
+    color: #000; }
+  100% {
+    top: 5vh;
+    color: #b00021; } }
+
+/*==========  Desktop First  ==========*/
+/* Large Devices, Wide Screens */
+@media only screen and (max-width: 1200px) {
+  .header__content_center__ads {
+    font-size: 40px; } }
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width: 992px) {
+  /**/ }
+
+/* Small Devices, Tablets */
+@media only screen and (max-width: 768px) {
+  /**/ }
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width: 480px) {
+  .center_content__title {
+    font-size: 2.8125em; }
+  .center_content__inform {
+    text-align: center;
+    font-size: 2.1875em; }
+  .buttons__next {
+    width: 50px;
+    height: 50px;
+    left: 42.5%;
+    -webkit-animation: BUTTON320 1s ease infinite;
+            animation: BUTTON320 1s ease infinite; }
+    .buttons__next .fa {
+      font-size: 0.8125em; }
+  .PersonalQualities .Name {
+    text-align: center;
+    font-size: 1.875em; }
+  .Technologies .Name {
+    text-align: center; }
+  .WoksSkill .Name {
+    text-align: center;
+    font-size: 1.625em; } }
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width: 320px) {
+  /**/ }
+
+/*==========  Mobile First  ==========*/
+/* Custom, iPhone Retina */
+@media only screen and (min-width: 320px) {
+  /**/ }
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width: 480px) {
+  /**/ }
+
+/* Small Devices, Tablets */
+@media only screen and (min-width: 768px) {
+  /**/ }
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 992px) {
+  /**/ }
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width: 1200px) {
+  /**/ }
