--- a/University/css/blocks/header/header.css
+++ b/University/css/blocks/header/header.css
@@ -166,7 +166,7 @@
 
 .button-items {
   width: 100%;
-  height: 100%;
+  height: 200px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -175,26 +175,14 @@
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
-          flex-direction: column; }
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
   .button-items__learn-more {
     margin: 20px auto;
     position: relative; }
-    .button-items__learn-more:before {
-      content: "!";
-      font-size: 35px;
-      position: absolute;
-      color: #000;
-      text-align: center;
-      color: #97d7f2;
-      bottom: 0;
-      left: 0%;
-      right: 79%;
-      top: 0;
-      -webkit-border-radius: 5px;
-              border-radius: 5px;
-      background-color: #e6740c;
-      line-height: 1.5;
-      border-right: 2px solid #fff; }
   .button-items__learn-more a {
     display: block;
     padding: 11px 30px 11px 45px;
@@ -236,20 +224,27 @@
     -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
-    margin: 20% 0%; }
-    .button-items__learn-more:before {
-      bottom: 90.7%; } }
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    margin: 0; }
+    .button-items__learn-more {
+      margin: 0; }
+    .button-items__open {
+      margin: 0; } }
 
 @media (min-width: 1200px) {
   .button-items {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
         -ms-flex-direction: row;
             flex-direction: row;
-    margin: 2% 0%; }
-    .button-items__learn-more:before {
-      bottom: 90.8%; } }
+    margin: 10% 0% 0% 0%; } }
 
 @media (min-width: 1700px) {
   .button-items {
@@ -257,10 +252,7 @@
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
         -ms-flex-direction: row;
-            flex-direction: row;
-    margin: 2% 0%; }
-    .button-items__learn-more:before {
-      bottom: 92.2%; } }
+            flex-direction: row; } }
 
 .page-header {
   width: 100%;
@@ -268,8 +260,7 @@
   background-image: url(../img/cup.jpg);
   background-position: +83% +0%;
   background-color: #000;
-  background-repeat: no-repeat;
-  position: relative; }
+  background-repeat: no-repeat; }
   .page-header h1 {
     margin: 0;
     padding: 0;
@@ -287,8 +278,8 @@
     background-color: #f7f2f2; }
   .page-header__about-site {
     width: 100%;
-    height: 100%;
-    margin: 5% 0%;
+    height: 70%;
+    margin: 2% 0%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -301,7 +292,8 @@
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
-            justify-content: center; }
+            justify-content: center;
+    position: relative; }
   .page-header__descript {
     -webkit-align-self: center;
         -ms-flex-item-align: center;
@@ -320,7 +312,7 @@
   .page-header__title {
     margin: 0;
     padding: 0;
-    font-size: 40px;
+    font-size: 41px;
     text-align: center;
     color: #fff; } }
 
@@ -328,17 +320,19 @@
   .page-header__about-site {
     margin: 13% 0%; }
   .page-header__descript {
-    font-size: 40px; }
+    font-size: 55px; }
   .page-header__title {
     font-size: 55px; } }
 
 @media (min-width: 1200px) {
   .page-header {
     -webkit-background-size: cover;
-            background-size: cover; }
+            background-size: cover;
+    height: 90vh; }
     .page-header__about-site {
-      margin: 10% 0%; }
+      margin: 5% 0% 0% 0%;
+      height: auto; }
     .page-header__descript {
-      font-size: 50px; }
+      font-size: 60px; }
     .page-header__title {
       font-size: 60px; } }
